Fix z-index for drop text

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -443,6 +443,7 @@ button:hover {
   height: 100vh;
   content: attr(data-drop-text);
   position: absolute;
+  z-index: 2;
 }
 
 .toast {
